# Indecisive-Assistant-Generator

./: README.md  pyproject.toml
data/: Food.json  Movies.json
src/indecisive_assistant_generator/: controller.py  main.py  options.py  questions.py
