[project]
name = "indecisive-assistant-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "ay-nur",email = "aycanurerdogan09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
]

[tool.poetry]
packages = [{include = "indecisive_assistant_generator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
